fixed background image sizes on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -625,8 +625,8 @@ Hero
     position: relative;
     padding: 60px 0 60px 0;
     min-height: 800px;
-    background: rgb(59, 80, 38) url('../img/trunks.jpg') no-repeat center center;
-    background-size: cover;
+    background: rgb(59, 80, 38) url('../img/trunks.jpg') no-repeat center center/cover;
+    /*background-size: cover;*/
     color: #eceee9;
 }
 .hero h1 {
